Prevented elements from shifting when table was large enough to make a vertical scrollbar appear

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -33,8 +33,8 @@
   #main-content-container {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    align-items: center
+    width: 100vw;
+    align-items: center;
   }
   
   /*****************************
@@ -72,6 +72,9 @@
     box-shadow: 1px -12px 28px -1px rgba(0, 0, 0, 0.87);
   }
   
-  #examples-dropdown {
-    cursor: pointer;
-  }
+#main-nav{
+  width: 100vw;
+}
+html, body{
+  overflow-x: hidden;
+}
